# mcp-cpp-agent

./: .gitignore  CLAUDE.md  CMakeLists.txt  QT_TRANSPORT_IMPLEMENTATION_PLAN.md  README.md  SDK_REFACTORING_PLAN.md  SDK_REFACTORING_PROPOSAL.md  mcp_sdk_evolution_roadmap.md  mcp_sdk_refactoring_plan.md  sdk_improvement_proposals.md  test_mcp_server.js
.agent/skills/mcp-cpp-agent-contributor/: SKILL.md
.agent/skills/mcp-qt-contributor/: SKILL.md
app/: CMakeLists.txt
app/include/: AgentController.h  ChatWindow.h
app/src/: AgentController.cpp  ChatWindow.cpp
conformance_runner/: CMakeLists.txt  RunnerConfig.h  ScenarioContext.cpp  ScenarioHandlersAuth.cpp  ScenarioHandlersBasic.cpp  ScenarioHandlersList.cpp  ScenarioRegistry.cpp  ScenarioRegistry.h  main.cpp
conformance_runner_qt/: CMakeLists.txt  ConsoleStdioTransport.cpp  ConsoleStdioTransport.h  RunnerConfig.cpp  ScenarioContext.h  ScenarioHandlersAuthQt.cpp  ScenarioHandlersList.cpp  conformance-baseline.yml  调试笔记.md
docs/: API_REFERENCE.md  windows-qt-https-runtime.md
docs/superpowers/plans/: 2026-06-30-sdk-hardening-plan.md  2026-07-03-multi-server-agent.md
docs/superpowers/specs/: 2026-07-03-multi-server-agent-design.md
examples/: CMakeLists.txt
examples/anysearch_qt/: CMakeLists.txt  main.cpp
examples/context7_qt/: main.cpp
examples/multi_server_agent/: AgentMainWindow.cpp  AgentMainWindow.h  AgentSession.cpp  AgentSession.h  CMakeLists.txt  DiagnosticReporter.cpp  DiagnosticReporter.h  HeuristicToolSelector.cpp  HeuristicToolSelector.h  ILlmBackend.h  LlmAgentExecutor.cpp  LlmAgentExecutor.h  LlmBackends.cpp  LlmBackends.h  README.md  anysearch_readme.md  debugging_guide.md  examples_config.json  main.cpp  mock_search_server.js
examples/playwright_qt/: main.cpp
mcp_core/: CMakeLists.txt  mcp_coreConfig.cmake.in
mcp_core/include/mcp_core/: ConsoleStdioTransport.h  HttpSseTransport.h  IMcpTransport.h  McpClientSession.h  McpOAuthClient.h  McpTool.h  McpTrafficEvent.h
mcp_core/src/: ConsoleStdioTransport.cpp  HttpSseTransport.cpp  McpClientSession.cpp  McpOAuthClient.cpp
mcp_qt/: CMakeLists.txt
mcp_qt/include/mcp_qt/: QtHttpTransport.h  QtMcpClient.h
mcp_qt/src/: QtHttpTransport.cpp  QtMcpClient.cpp  QtStdioTransport.cpp
mcp_qt_client/: CMakeLists.txt
mcp_qt_client/include/mcp_qt_client/: McpParser.h  McpPromptRouter.h  McpQtClient.h  McpQtToolResult.h  McpResourceRouter.h  McpServerManager.h  McpToolsModel.h
mcp_qt_client/src/: McpPromptRouter.cpp  McpQtClient.cpp  McpResourceRouter.cpp  McpResourceTemplatesModel.cpp  McpServerManager.cpp  McpToolRouter.cpp  McpToolsModel.cpp
mcp_qt_transport/: CMakeLists.txt
mcp_qt_transport/include/mcp_qt_transport/: QtHttpSseTransport.h  QtProcessStdioTransport.h
mcp_qt_transport/src/: QtHttpSseTransport.cpp  QtHttpSseWorker.cpp  QtHttpSseWorker.h  QtProcessStdioTransport.cpp  QtSseParser.cpp  QtSseParser.h
src/client/: CMakeLists.txt
src/client/include/mcp_qt_client/: IMcpConfigLoader.h  McpDiagnosticReporter.h  McpError.h  McpHost.h  McpJsonConfigLoader.h  McpQtClient.h  McpResourceSubscriptionRouter.h  McpServerConfig.h  McpServerManager.h  McpToolRouter.h
src/client/src/: McpDiagnosticReporter.cpp  McpHost.cpp  McpJsonConfigLoader.cpp  McpPromptRouter.cpp  McpPromptsModel.cpp  McpQtClient.cpp  McpResourcesModel.cpp  McpServerManager.cpp  McpToolRouter.cpp  McpToolsModel.cpp
src/core/: CMakeLists.txt
src/core/include/mcp_core/: JsonRpcDispatcher.h  McpClientSession.h  McpMessage.h  McpOAuthClient.h  McpReconnectPolicy.h  mcp_core.h
src/core/src/: JsonRpcDispatcher.cpp  McpClientSession.cpp  McpOAuthClient.cpp
src/transport/: CMakeLists.txt
src/transport/include/mcp_qt_transport/: QtProcessStdioTransport.h  QtStatelessHttpTransport.h
src/transport/src/: QtHttpSseTransport.cpp  QtHttpSseWorker.cpp  QtHttpSseWorker.h  QtProcessStdioTransport.cpp  QtSseParser.cpp  QtSseParser.h  QtStatelessHttpTransport.cpp
test/: test_qt_http_request_config.cpp  test_qt_http_transport.cpp  test_qt_transport_shutdown.cpp
tests/: CMakeLists.txt  common.h  main.cpp  main_standalone.cpp  main_standalone_conformance.cpp
tests/conformance/: CMakeLists.txt  test_runner_config.cpp  test_runner_process.cpp  test_scenario_registry.cpp
tests/features/: test_new_capabilities.cpp  test_notifications.cpp  test_prompts.cpp  test_recovery.cpp  test_resources.cpp  test_sampling_roots_oauth.cpp  test_tools.cpp  test_traffic_logging.cpp  test_typed_results.cpp
tests/integration/: test_with_anysearch_mcp.cpp  test_with_filesystem_server.cpp  test_with_inspector_cases.cpp
tests/protocol/: test_capabilities.cpp  test_error_response.cpp  test_initialize.cpp  test_json_rpc.cpp
tests/transport/: test_http_transport.cpp  test_process_lifecycle.cpp  test_stdio_transport.cpp
tests_qt/: CMakeLists.txt  TEST_WORKFLOW.md  common.cpp  main_qt.cpp  test_multi_server_agent_diagnostics.cpp  test_multi_server_agent_selector.cpp  test_multi_server_agent_session.cpp  test_qt_http_transport.cpp  test_qt_https_runtime.cpp  test_qt_resource_router.cpp  test_qt_server_manager_router.cpp  test_qt_session_integration.cpp  test_qt_sse_parser.cpp  test_qt_tools_model.cpp  test_qt_transport_recovery.cpp  test_qt_typed_results.cpp
